Expose MLS public keys in an endpoint

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -48,6 +48,7 @@ library
     Wire.API.MLS.Extension
     Wire.API.MLS.Group
     Wire.API.MLS.KeyPackage
+    Wire.API.MLS.Keys
     Wire.API.MLS.Message
     Wire.API.MLS.Proposal
     Wire.API.MLS.Serialisation
