WIP: non-default proposal type integration test

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -425,6 +425,7 @@ executable galley-integration
     , base
     , base64-bytestring
     , bilge
+    , binary
     , brig-types
     , bytestring
     , bytestring-conversion
