--- a/charts/galley/templates/mls-secret.yaml
+++ b/charts/galley/templates/mls-secret.yaml
@@ -9,6 +9,6 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{- if .Values.secrets.mlsPrivateKey_ed25519 }}
-  ed25519.pem: {{ .Values.secrets.mlsPrivateKey_ed25519 | b64enc | quote }}
+  {{- if .Values.secrets.mlsPrivateKeys.removal.ed25519 }}
+  removal/ed25519.pem: {{ .Values.secrets.mlsPrivateKeys.removal.ed25519 | b64enc | quote }}
   {{- end -}}
