[SQServices-1627] Check remaining time of an activated a feature in back office (#2564)

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -227,6 +227,7 @@ library
     , resourcet
     , saml2-web-sso
     , schema-profunctor
+    , scientific
     , servant
     , servant-client
     , servant-client-core
