--- a/charts/galley/templates/mls-secret.yaml
+++ b/charts/galley/templates/mls-secret.yaml
@@ -10,5 +10,5 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.secrets.mlsPrivateKeys.removal.ed25519 }}
-  removal/ed25519.pem: {{ .Values.secrets.mlsPrivateKeys.removal.ed25519 | b64enc | quote }}
+  removal_ed25519.pem: {{ .Values.secrets.mlsPrivateKeys.removal.ed25519 | b64enc | quote }}
   {{- end -}}
