charts/coturn: refine error message

--- a/charts/coturn/templates/secret.yaml
+++ b/charts/coturn/templates/secret.yaml
@@ -1,5 +1,5 @@
 {{- if or (not .Values.secrets) (not .Values.secrets.zrestSecrets) }}
-{{- fail "Secrets are not defined" }}
+{{- fail "TURN authentication secrets are not defined in .Values.secrets.zrestSecrets" }}
 {{- else if eq (len .Values.secrets.zrestSecrets) 0 }}
 {{- fail "At least one authentication secret must be defined" }}
 {{- else }}
