--- a/libs/extended/extended.cabal
+++ b/libs/extended/extended.cabal
@@ -143,7 +143,7 @@ test-suite extended-tests
     -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
     -threaded -with-rtsopts=-N
 
-  build-tool-depends: hspec-discover:hspec-discover -any
+  build-tool-depends: hspec-discover:hspec-discover
   build-depends:
       aeson
     , base
