--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libs/wire-message-proto-lens/generic-message-proto"]
 	path = libs/wire-message-proto-lens/generic-message-proto
 	url = https://github.com/wireapp/generic-message-proto
+[submodule "cloned/cql-io"]
+	path = cloned/cql-io
+	url = https://gitlab.com/axeman/cql-io.git
