--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -107,6 +107,7 @@ library
     Wire.API.User
     Wire.API.User.Activation
     Wire.API.User.Auth
+    Wire.API.User.Auth2
     Wire.API.User.Client
     Wire.API.User.Client.Prekey
     Wire.API.User.Handle
@@ -617,6 +618,7 @@ test-suite wire-api-tests
     Test.Wire.API.Team.Export
     Test.Wire.API.Team.Member
     Test.Wire.API.User
+    Test.Wire.API.User.Auth
     Test.Wire.API.User.RichInfo
     Test.Wire.API.User.Search
 
