Add option for MLS private keys (#2602)
* Add mls secrets to galley chart and settings

* Store MLS private keys in a map

* Document mlsPrivateKeyPaths setting

* Add functions to load private keys in x509 format

* Use x509 private keys

* Do not use a map to store key pairs

* Expose MLS public keys in an endpoint

* Add CHANGELOG entries

* Add testing private key to CI config

* Add mls secret to galley integration

* Add purpose to MLS private keys

* Cannot use paths as secret keys in helm charts

* Add purpose to mlsPrivateKeyPaths in galley chart

* Fix yaml formatting of test private key

* Add purpose to docs

Co-authored-by: Stefan Matting <stefan@wire.com>

--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -59,6 +59,11 @@ data:
       enableIndexedBillingTeamMembers: {{ .settings.enableIndexedBillingTeamMembers }}
       {{- end }}
       federationDomain: {{ .settings.federationDomain }}
+      mlsPrivateKeyPaths:
+        {{- if $.Values.secrets.mlsPrivateKeys.removal.ed25519 }}
+        removal:
+          ed25519: "/etc/wire/galley/secrets/removal_ed25519.pem"
+        {{- end }}
       {{- if .settings.featureFlags }}
       featureFlags:
         sso: {{ .settings.featureFlags.sso }}
