--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -32,6 +32,7 @@ library
     Galley.API.Message
     Galley.API.MLS
     Galley.API.MLS.KeyPackage
+    Galley.API.MLS.Keys
     Galley.API.MLS.Message
     Galley.API.MLS.Welcome
     Galley.API.One2One
@@ -115,6 +116,7 @@ library
     Galley.Intra.Team
     Galley.Intra.User
     Galley.Intra.Util
+    Galley.Keys
     Galley.Monad
     Galley.Options
     Galley.Queue
@@ -175,6 +177,8 @@ library
       aeson                      >=2.0.1.0
     , amazonka                   >=1.4.5
     , amazonka-sqs               >=1.4.5
+    , asn1-encoding
+    , asn1-types
     , async                      >=2.0
     , base                       >=4.6     && <5
     , base64-bytestring          >=1.0
@@ -270,6 +274,7 @@ library
     , warp                       >=3.0
     , wire-api
     , wire-api-federation
+    , x509
 
   default-language:   Haskell2010
 
