--- a/cabal.project
+++ b/cabal.project
@@ -144,6 +144,11 @@ source-repository-package
 
 source-repository-package
     type: git
+    location: https://gitlab.com/axeman/cql-io
+    tag: c2b6aa995b5817ed7c78c53f72d5aa586ef87c36
+
+source-repository-package
+    type: git
     location: https://gitlab.com/axeman/swagger
     tag: e2d3f5b5274b8d8d301b5377b0af4319cea73f9e
 
