--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -650,6 +650,7 @@ executable brig-schema
     V69_MLSKeyPackageRefMapping
     V70_UserEmailUnvalidated
     V71_AddTableVCodesThrottle
+    V72_AddNonceTable
     V9
 
   hs-source-dirs:     schema/src
