--- a/charts/galley/templates/mls-secret.yaml
+++ b/charts/galley/templates/mls-secret.yaml
@@ -9,6 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{- if .Values.secrets.mlsPrivateKeys }}
   {{- if .Values.secrets.mlsPrivateKeys.removal.ed25519 }}
   removal_ed25519.pem: {{ .Values.secrets.mlsPrivateKeys.removal.ed25519 | b64enc | quote }}
+  {{- end -}}
   {{- end -}}
