Upgrade webapp to 2022-08-22-RC

--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -9,7 +9,7 @@ resources:
     cpu: "1"
 image:
   repository: quay.io/wire/webapp
-  tag: "2022-05-04-production.0-v0.29.7-0-a6f2ded"
+  tag: "2022-08-22-RC"
 service:
   https:
     externalPort: 443
