ttl from config

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -284,5 +284,8 @@ data:
       {{- if .set2FACodeGenerationDelaySecs }}
       set2FACodeGenerationDelaySecs: {{ .set2FACodeGenerationDelaySecs }}
       {{- end }}
+      {{- if .setNonceTtlSecs }}
+      setNonceTtlSecs: {{ .setNonceTtlSecs }}
+      {{- end }}
     {{- end }}
   {{- end }}
