--- a/services/brig/brig.integration.yaml
+++ b/services/brig/brig.integration.yaml
@@ -188,6 +188,7 @@ optSettings:
     - domain: example.com
       search_policy: full_search
   set2FACodeGenerationDelaySecs: 5
+  setNonceTtlSecs: 5
 
 logLevel: Warn
 # ^ NOTE: We log too much in brig, if we set this to Info like other services, running tests
