--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -476,6 +476,9 @@ nginx_conf:
     - path: /mls/messages
       envs:
       - all
+    - path: /nonce/clients
+      envs:
+      - all
     gundeck:
     - path: /push/api-docs$
       envs:
