charts/coturn: remove cert-manager integration.

--- a/charts/coturn/templates/statefulset.yaml
+++ b/charts/coturn/templates/statefulset.yaml
@@ -48,7 +48,7 @@ spec:
         {{- if .Values.tls.enabled }}
         - name: secrets-tls
           secret:
-            secretName: coturn-tls
+            secretName: {{ .Values.tls.secretRef }}
         {{- end }}
       initContainers:
         - name: get-external-ip
