--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -167,7 +167,7 @@ library
   ghc-options:
     -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
     -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
-    -funbox-strict-fields
+    -funbox-strict-fields -fplugin=Polysemy.Plugin
 
   build-depends:
       aeson                      >=2.0.1.0
@@ -240,6 +240,7 @@ library
     , optparse-applicative       >=0.11
     , pem                        >=0.2
     , polysemy
+    , polysemy-plugin
     , polysemy-wire-zoo
     , proto-lens                 >=0.1
     , random-shuffle             >=0.0.3
