Swap old dev-env with new dev-env
cabal and hls still don't work

--- a/.envrc
+++ b/.envrc
@@ -1,26 +1,35 @@
-# Build a folder ./.env that contains all the tools
+# Build a folder ./.env that contains the dev-shell which load all the right env
+# vars.
+#
 # To speed up the nix evaluation, we only rebuild our environment when `./nix`
-# changes. We do this by adding its contents to the nix store and using its
-# store path as a cache key. We only use this to build the dev environment. This
-# will fail building in case anything inside the devEnv is reaching outside
-# the nix/ subfolder
-store_path=$(nix-store --add ./nix/)
+# or any of the `default.nix` files change. We do this by adding all these files
+# to the nix store and using the store paths as a cache key.
+
+store_paths=$(find . -name default.nix  | grep -v '^./nix' | grep -v '^./dist-newstyle' | xargs nix-store --add ./nix)
+
+# store_paths=$(nix-store --add ./nix/)
 layout_dir=$(direnv_layout_dir)
+env_dir=./.env
 [[ -d "$layout_dir" ]] || mkdir -p "$layout_dir"
-if [[ ! -d ./.env || ! -f "$layout_dir/nix-rebuild" || "$store_path" != $(< "$layout_dir/nix-rebuild" ) ]]; then
 
-  # this builds "devEnv" defined in ./nix/default.nix and outputs to ./.env
-  nix-build "$store_path" -A devEnv --out-link ./.env
+if [[ ! -d "$env_dir" || ! -f "$layout_dir/nix-rebuild" || "$store_paths" != $(< "$layout_dir/nix-rebuild" ) ]]; then
 
-  echo "$store_path" > "$layout_dir/nix-rebuild"
+  [[ -d "$env_dir" ]] || mkdir -p "$env_dir"
+
+  # this builds "wireServer.devShell" defined in ./nix/default.nix and outputs to ./.env
+  nix print-dev-env --impure --expr "(import ./nix).wireServer.devShell" > "${env_dir}/dev-shell.sh"
+
+  nix-build ./nix -A profileEnv --out-link "${env_dir}/profile-env"
+
+  echo "$store_paths" > "$layout_dir/nix-rebuild"
 fi
 
-PATH_add "./.env/bin"
+eval "$(< "${env_dir}/dev-shell.sh")"
 
 # source .profile from `$env`. This sets NIX_PATH to pkgs defined in
 # ./nix/default.nix. Tis is useful for nix tooling that runs inside this direnv,
 # e.g. "nix-shell -p foo" will get "foo" for pkgs defined in ./nix/default.nix
- [[ -f "./.env/.profile" ]] && source_env "./.env/.profile"
+[[ -f "${env_dir}/profile-env/.profile" ]] && source_env "${env_dir}/profile-env/.profile"
 
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
