Simplify and move around test code

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -466,6 +466,7 @@ executable galley-integration
     , kan-extensions
     , lens
     , lens-aeson
+    , memory
     , metrics-wai
     , mtl
     , optparse-applicative
