.envrc: Remove stale env_dir and dead code

--- a/.envrc
+++ b/.envrc
@@ -6,10 +6,12 @@
 # to the nix store and using the store paths as a cache key.
 
 store_paths=$(find . -name default.nix  | grep -v '^./nix' | grep -v '^./dist-newstyle' | xargs nix-store --add ./nix)
-
-# store_paths=$(nix-store --add ./nix/)
 layout_dir=$(direnv_layout_dir)
 env_dir=./.env
+
+# The env_dir used to be a symlink to env in nix store, if it exists, delete it.
+[[ ! -L "$env_dir" ]] || rm -f "$env_dir"
+
 [[ -d "$layout_dir" ]] || mkdir -p "$layout_dir"
 
 if [[ ! -d "$env_dir" || ! -f "$layout_dir/nix-rebuild" || "$store_paths" != $(< "$layout_dir/nix-rebuild" ) ]]; then
