--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -427,6 +427,7 @@ executable galley-integration
     , base
     , base64-bytestring
     , bilge
+    , binary
     , brig-types
     , bytestring
     , bytestring-conversion
@@ -437,6 +438,7 @@ executable galley-integration
     , comonad
     , containers
     , cookie
+    , cryptonite
     , currency-codes
     , data-default
     , data-timeout
@@ -461,6 +463,7 @@ executable galley-integration
     , kan-extensions
     , lens
     , lens-aeson
+    , memory
     , metrics-wai
     , mtl
     , optparse-applicative
