API and basic test

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -506,6 +506,7 @@ executable brig-integration
     , attoparsec
     , base
     , base16-bytestring
+    , base64-bytestring
     , bilge
     , bloodhound
     , brig
