fix integration tests

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -543,6 +543,7 @@ executable brig-integration
     , optparse-applicative
     , pem
     , polysemy
+    , polysemy-wire-zoo
     , process
     , proto-lens
     , QuickCheck
