Run integration tests with delivered Elastic Search version
wire-server-deploy delivered a different version as used here for
integration tests.

--- a/charts/elasticsearch-ephemeral/values.yaml
+++ b/charts/elasticsearch-ephemeral/values.yaml
@@ -1,6 +1,7 @@
 image:
   repository: elasticsearch
-  tag: 6.8.18
+  # Keep this aligned with the Elastic Search version in wire-server-deploy!
+  tag: 6.8.23
 
 service:
   httpPort: 9200
