Added linting scripts, relinted new changes.

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -8,8 +8,10 @@
 # Left for the programmer to decide. See discussion at https://github.com/wireapp/wire-server/pull/2382#discussion_r871194424
 - ignore: { name: Avoid lambda }
 - ignore: { name: Avoid lambda using `infix` }
-
+- ignore: { name: Eta reduce }
 - ignore: { name: Use section }
+- ignore: { name: Use underscore }
+
 # custom rules:
 - hint: { lhs: (() <$), rhs: void }
 - hint: { lhs: return, rhs: pure }
