using pointer and storaable instance

--- a/stack.yaml
+++ b/stack.yaml
@@ -29,6 +29,7 @@ packages:
 - libs/gundeck-types
 - libs/hscim
 - libs/imports
+- libs/jwt-tools
 - libs/metrics-core
 - libs/metrics-wai
 - libs/polysemy-wire-zoo
