calling rust with c strings

--- a/libs/jwt-tools/jwt-tools.cabal
+++ b/libs/jwt-tools/jwt-tools.cabal
@@ -122,9 +122,11 @@ library
       base
     , base64-bytestring
     , bytestring
+    , bytestring-conversion
     , http-types
     , imports
     , QuickCheck
+    , string-conversions
     , types-common
     , wire-api
 
