charts/coturn: refactor labels.
This adds the labels app, chart, heritage, and release to the coturn chart
(same as the wire-server charts), and removes the boilerplate for overriding
resource names.

--- a/charts/coturn/templates/service-account.yaml
+++ b/charts/coturn/templates/service-account.yaml
@@ -2,16 +2,22 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "coturn.fullname" . }}
+  name: coturn
   labels:
-    {{- include "coturn.labels" . | nindent 4 }}
+    app: coturn
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "coturn.fullname" . }}
+  name: coturn
   labels:
-    {{- include "coturn.labels" . | nindent 4 }}
+    app: coturn
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 rules:
   - apiGroups: [""]
     resources: [nodes]
@@ -20,14 +26,17 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "coturn.fullname" . }}
+  name: coturn
   labels:
-    {{- include "coturn.labels" . | nindent 4 }}
+    app: coturn
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
-  name: {{ include "coturn.fullname" . }}
+  name: coturn
 subjects:
   - kind: ServiceAccount
-    name: {{ include "coturn.fullname" . }}
+    name: coturn
     namespace: {{ .Release.Namespace }}
