--- a/charts/coturn/templates/configmap-coturn-conf-template.yaml
+++ b/charts/coturn/templates/configmap-coturn-conf-template.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "coturn.fullname" . }}
-  labels:
-    {{- include "coturn.selectorLabels" . | nindent 4 }}
+  name: coturn
 
 data:
   coturn.conf.template: |
