--- a/charts/coturn/templates/secret.yaml
+++ b/charts/coturn/templates/secret.yaml
@@ -8,9 +8,10 @@ kind: Secret
 metadata:
   name: coturn
   labels:
+    app: coturn
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 type: Opaque
 stringData:
   zrest_secret.txt: |
