--- a/charts/coturn/values.yaml
+++ b/charts/coturn/values.yaml
@@ -36,6 +36,10 @@ tls:
     pullPolicy: IfNotPresent
     tag: 1aa6cbbf2ce3a5182ec47e3579bbcb8f47e22fdc
 
+metrics:
+  serviceMonitor:
+    enabled: false
+
 # This chart optionally supports waiting for traffic to drain from coturn
 # before pods are terminated. Warning: coturn does not have any way to steer
 # incoming client traffic away from itself on its own, so this functionality
