--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -748,6 +748,7 @@ test-suite spec
     Test.Spar.DataSpec
     Test.Spar.Intra.BrigSpec
     Test.Spar.Roundtrip.ByteString
+    Test.Spar.Scim.UserSpec
     Test.Spar.ScimSpec
     Test.Spar.Sem.DefaultSsoCodeSpec
     Test.Spar.Sem.IdPRawMetadataStoreSpec
