wire-server helm chart: Adjust default CPU/Memory
* Remove CPU limits to avoid CPU throttling
* adjust request CPU and memory based on observed values.

Overall this decreases the amount of CPU/memory that the wire-server chart needs to install/schedule pods.

--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -10,11 +10,10 @@ metrics:
     enable: false
 resources:
   requests:
-    memory: "256Mi"
+    memory: "300Mi"
     cpu: "100m"
   limits:
-    memory: "512Mi"
-    cpu: "500m"
+    memory: "1Gi"
 config:
   logLevel: Info
   logFormat: StructuredJSON
