charts/coturn: add metrics port to Service.
The Service is headless, so this port is not exposed to the outside world; this
is required so that the metrics endpoint is visible to the metrics collection
agent which consumes the ServiceMonitor.

--- a/charts/coturn/templates/service.yaml
+++ b/charts/coturn/templates/service.yaml
@@ -25,6 +25,9 @@ spec:
       port: {{ .Values.coturnTurnTlsListenPort }}
       targetPort: coturn-tls
     {{- end }}
+    - name: status-http
+      port: {{ .Values.coturnMetricsListenPort }}
+      targetPort: status-http
   selector:
     app: coturn
     release: {{ .Release.Name }}
